refactor: replace deprecated API calls with modern equivalents
- Replace URLClassLoader.newInstance() (deprecated since Java 9) with
  new URLClassLoader() constructor in CodeMojo
- Replace new String(Files.readAllBytes()) with Files.readString()
  in MojoTest to avoid platform-default charset
- Replace new String(bytes) with new String(bytes, StandardCharsets.UTF_8)
  in ZipUtilsTest for explicit charset encoding

https://claude.ai/code/session_01XGDhM2iQCNag7dpZMBa6Ls